force-app/main/default/objects/Account/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Alan Tipi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kapalı Alan</fullName>
            </value>
            <value>
                <fullName>Açık Alan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>