force-app/main/default/objects/Account/fields/Customer_Channel__c.field-meta.xml
<CustomField>
    <fullName>Customer_Channel__c</fullName>
    <label>Müşteri Kanalı</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bireysel</fullName>
            </value>
            <value>
                <fullName>TPS</fullName>
            </value>
            <value>
                <fullName>CPO</fullName>
            </value>
            <value>
                <fullName>Bayilik</fullName>
            </value>
            <value>
                <fullName>Filo</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>