force-app/main/default/objects/Account/fields/Electric_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Electric_Supplier__c</fullName>
    <label>Elektrik Sağlayıcı</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Electric Supplier Accounts</relationshipLabel>
    <relationshipName>Electric_Supplier_Accounts</relationshipName>
</CustomField>