force-app/main/default/objects/Account/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Konum</label>
    <type>Location</type>
    <scale>5</scale>
</CustomField>