force-app/main/default/objects/Account/fields/Main_Operator__c.field-meta.xml
<CustomField>
    <fullName>Main_Operator__c</fullName>
    <label>Ana Operatör</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WAT Mobilite</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>