force-app/main/default/objects/Account/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Bağlı Operatör</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WAT Mobilite</fullName>
                <default>true</default>
                <label>WAT Mobilite</label>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>