force-app/main/default/objects/Account/fields/Tax_Number_VKN__c.field-meta.xml
<CustomField>
    <fullName>Tax_Number_VKN__c</fullName>
    <label>VKN</label>
    <type>Text</type>
    <length>11</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>