force-app/main/default/objects/Account/fields/Tax_Office__c.field-meta.xml
<CustomField>
    <fullName>Tax_Office__c</fullName>
    <label>Vergi Dairesi</label>
    <type>Text</type>
    <length>100</length>
</CustomField>