force-app/main/default/objects/Account/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Kullanım Tipi</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Genel</fullName>
            </value>
            <value>
                <fullName>Özel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>