force-app/main/default/objects/Account/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <label>Çalışma Saatleri</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7x24 Aktif</fullName>
            </value>
            <value>
                <fullName>Diğer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>