force-app/main/default/objects/Account/validationRules/Station_Has_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Station_Has_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL($RecordType.DeveloperName, 'Station'), ISBLANK(ParentId))</errorConditionFormula>
    <errorMessage>İstasyon kaydı için bir üst hesap (Parent Account) zorunludur.</errorMessage>
</ValidationRule>